Issue #29337: Fixed possible BytesWarning when compare the code objects. Warnings could be emitted at compile time.